--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.42"
+clap = { version = "4.5.53", features = ["derive"] }
 futures = "0.3.31"
 indicatif = "0.18.3"
 reqwest = { version = "0.12.28", features = ["json"] }
