--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ chrono = "0.4.42"
 clap = { version = "4.5.53", features = ["derive"] }
 futures = "0.3.31"
 indicatif = "0.18.3"
-reqwest = { version = "0.12.28", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
@@ -17,6 +16,11 @@ toml = "0.9.10"
 tracing = "0.1.44"
 tracing-indicatif = "0.3.14"
 tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
+
+[dependencies.reqwest]
+version = "0.13.1"
+default-features = false
+features = ["charset", "http2", "json", "native-tls", "query", "system-proxy"]
 
 [profile.dev.package."*"]
 opt-level = 3
