--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ indicatif = "0.18.3"
 reqwest = { version = "0.13.1", features = ["json", "query"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
+sha2 = "0.10"
 time = { version = "0.3.44", features = ["local-offset", "macros"] }
 tokio = { version = "1.49.0", features = ["full"] }
 toml = "0.9.10"
